[tool.poetry]
name = "lab18"
version = "0.1.0"
description = ""
authors = ["Isaiah Burkes <idkburkes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.0"
nltk = "^3.7"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
